--- a/src/css/app.css
+++ b/src/css/app.css
@@ -23,3 +23,23 @@ body {
 .ui.button i {
     margin: 0;
 }
+.marker-container {
+    width: 50px;
+    height: 50px;
+    padding: 3px;
+    border-radius: 100%;
+    /* border: 3px solid #3498db;
+    background-color: rgba(255,255,255,.9); */
+    position: relative;
+}
+.marker-container img {
+    width: 100%;
+}
+.marker-container span {
+    top: -25px;
+    left: 0;
+    border-radius: 5px;
+    padding: 1px 3px;
+    position: absolute;
+    background-color: rgba(255,255,255,.9);
+}
